# slicefsm

./: .gitignore  DESIGN - Deterministic Slice Harness.md  OVERVIEW.md  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
skill/: SKILL.md
skill/references/: context-scoping.md  slicing.md
src/slicefsm/: __init__.py  cli.py  context_engine.py  edits.py  failure.py  gatelog.py  git_util.py  hook.py  manual_checks.py  ops.py  policy.py  server.py  state.py  verify.py
src/slicefsm/backends/: __init__.py  base.py  python_ast.py  treesitter.py
tests/: test_cli.py  test_context_engine.py  test_hook.py  test_ops.py  test_policy.py  test_state.py  test_treesitter.py
